translations mostly completed (up to 84% translated)

--- a/share/locale/de.json
+++ b/share/locale/de.json
@@ -1,23 +1,173 @@
 {
     "preparing_files": "Dateien werden vorbereitet.",
-    "give_this_url": "Geben Sie diese URL der Person, der Sie die Datei zusenden möchten:",
-    "ctrlc_to_stop":  "Drücken Sie Strg+C um den Server anzuhalten",
+    "give_this_url": "Gib diese URL an den Empfänger:",
+    "ctrlc_to_stop": "Drücke Strg+C um den Server anzuhalten",
     "not_a_file": "{0:s} ist keine Datei.",
     "other_page_loaded": "URL geladen",
-    "closing_automatically": "Halte automatisch an, da der Download beendet wurde",
+    "closing_automatically": "Gestoppt, da der Download beendet wurde",
     "large_filesize": "Warnung: Das Senden von großen Dateien kann Stunden dauern",
-    "help_local_only": "Nicht mit Tor benutzen, nur für Entwicklung",
-    "help_stay_open": "Den onion service nicht anhalten nachdem ein Download beendet wurde",
-    "help_debug": "Fehler auf Festplatte schreiben",
+    "help_local_only": "Tor nicht benutzen (nur für Entwicklung)",
+    "help_stay_open": "Den OnionService nicht anhalten nachdem ein Download beendet wurde",
+    "help_debug": "Schreibe Fehler von OnionShare nach stdout und Webfehler aus die Festplatte",
     "help_filename": "Liste der zu teilenden Dateien oder Verzeichnisse",
-    "gui_drag_and_drop": "Drag & drop\nDateien hier",
+    "gui_drag_and_drop": "Dateien und Ordner hierher ziehen\num sie zu teilen",
     "gui_add": "Hinzufügen",
     "gui_delete": "Löschen",
     "gui_choose_items": "Auswählen",
     "gui_share_start_server": "Server starten",
     "gui_share_stop_server": "Server anhalten",
     "gui_copy_url": "URL kopieren",
-    "gui_downloads": "Downloads:",
+    "gui_downloads": "Bisherige Downloads",
     "gui_copied_url": "URL wurde in die Zwischenablage kopiert",
-    "gui_please_wait": "Bitte warten..."
+    "gui_please_wait": "Starte... Klicken zum Abbrechen.",
+    "timeout_download_still_running": "Warte auf Beendigung des Downloads",
+    "systray_menu_exit": "Beenden",
+    "gui_settings_authenticate_password_option": "Passwort",
+    "gui_settings_password_label": "Passwort",
+    "gui_settings_button_save": "Speichern",
+    "gui_settings_button_cancel": "Abbrechen",
+    "gui_settings_button_help": "Hilfe",
+    "gui_settings_shutdown_timeout": "Stoppe den Server bei:",
+    "systray_download_started_title": "OnionShareDownload begonnen",
+    "systray_download_started_message": "Ein Nutzer hat begonnen deine Dateien herunterzuladen",
+    "systray_download_completed_title": "OnionShare Download beendet",
+    "systray_download_completed_message": "Der Benutzer hat deine Dateien heruntergeladen",
+    "systray_download_canceled_title": "OnionShareDownload abgebrochen",
+    "systray_download_canceled_message": "Der Benutzer hat den Download abgebrochen",
+    "gui_copy_hidservauth": "HidServAuth kopieren",
+    "gui_canceled": "Abgebrochen",
+    "gui_copied_hidservauth_title": "HidServAuth kopiert",
+    "gui_quit_warning_quit": "Beenden",
+    "gui_quit_warning_dont_quit": "Abbrechen",
+    "gui_settings_window_title": "Eintellungen",
+    "gui_settings_autoupdate_timestamp": "Letzte Überprüfung: {}",
+    "gui_settings_autoupdate_timestamp_never": "Niemals",
+    "gui_settings_close_after_first_download_option": "Server nach dem ersten Download stoppen",
+    "gui_settings_connection_type_label": "Wie soll sich OnionShare mit Tor verbinden?",
+    "config_onion_service": "Richte den Onionservice auf Port {0:d} ein.",
+    "give_this_url_stealth": "Gib dem Empfänger diese URL und die HidServAuth-Zeile:",
+    "give_this_url_receive": "Gib diese URL dem Sender:",
+    "give_this_url_receive_stealth": "Gib diese URL und die HidServAuth-Zeile an den Sender:",
+    "not_a_readable_file": "{0:s} kann nicht gelesen werden.",
+    "no_available_port": "Konnte keinen freien Port finden, um den Onionservice zu starten",
+    "close_on_timeout": "Wegen Zeitablaufs gestoppt",
+    "systray_upload_started_title": "OnionShare Upload gestartet",
+    "systray_upload_started_message": "Ein Nutzer hat begonnen Dateien auf deinen Computer zu laden",
+    "help_shutdown_timeout": "Den Server nach einer bestimmten Zeit anhalten",
+    "help_receive": "Empfange Dateien anstatt sie zu senden",
+    "gui_share_stop_server_shutdown_timeout": "Server stoppen (läuft noch {} Sekunden)",
+    "gui_share_stop_server_shutdown_timeout_tooltip": "Zeit läuft in {} Sekunden ab",
+    "gui_settings_connection_type_control_port_option": "Verbinde über den control port",
+    "gui_settings_connection_type_socket_file_option": "Verbinde über ein socket file",
+    "gui_settings_control_port_label": "Control port",
+    "gui_settings_socket_file_label": "Socket file",
+    "gui_settings_socks_label": "SOCKS Port",
+    "gui_settings_authenticate_no_auth_option": "Keine Authentifizierung, oder Authentifizierung per cookie",
+    "gui_settings_tor_bridges_no_bridges_radio_option": "Benutze keine bridges",
+    "gui_settings_tor_bridges_obfs4_radio_option": "Benutze eingebaute obfs4 pluggable transports",
+    "gui_settings_tor_bridges_obfs4_radio_option_no_obfs4proxy": "Benutze eingebaute obfs4 pluggable transports (benötigt obfs4proxy)",
+    "gui_settings_tor_bridges_meek_lite_azure_radio_option": "Benutze eingebaute meek_lite (Amazon) pluggable transports",
+    "gui_settings_tor_bridges_meek_lite_azure_radio_option_no_obfs4proxy": "Benutze eingebaute meek_lite (Azure) pluggable transports (benötigt obfs4proxy)",
+    "gui_settings_tor_bridges_custom_radio_option": "Benutze benutzerdefinierte bridges",
+    "gui_settings_tor_bridges_custom_label": "Bridges findest du unter  <a href=\"https://bridges.torproject.org/options\">https://bridges.torproject.org</a>",
+    "gui_settings_shutdown_timeout_checkbox": "Stoppe nach einer bestimmten Zeit",
+    "settings_error_auth": "Mit {}:{} verbinden aber nicht authentifiziert. Eventuell handelt es sich nicht um einen Tor controller?",
+    "settings_error_missing_password": "Mit dem Tor controller verbunden, aber er benötigt ein Passwort zur Authentifizierung.",
+    "connecting_to_tor": "Verbinde mit dem Tornetzwerk",
+    "gui_tor_connection_ask_quit": "Beenden",
+    "gui_tor_connection_lost": "Verbindung zu Tor getrennt.",
+    "help_stealth": "Nutze Klientauthorisierung (fortgeschritten)",
+    "gui_receive_start_server": "Starte den Empfängermodus",
+    "gui_receive_stop_server": "Stoppe den Empfängermodus",
+    "gui_receive_stop_server_shutdown_timeout": "Stoppe den Empfängermodus (stoppt automatisch in {})",
+    "gui_receive_stop_server_shutdown_timeout_tooltip": "Zeit läuft in {} Sekunden ab",
+    "gui_no_downloads": "Bisher keine Downloads",
+    "gui_copied_url_title": "OnionShareadresse kopiert",
+    "gui_copied_hidservauth": "HidServAuth-Zeile in die Zwischenablage kopiert",
+    "gui_download_upload_progress_complete": "%p%, {0:s} vergangen.",
+    "gui_download_upload_progress_starting": "{0:s}, %p% (berechne)",
+    "gui_download_upload_progress_eta": "{0:s}, Voraussichtliche Dauer: {1:s}, %p%",
+    "version_string": "OnionShare {0:s} | https://onionshare.org/",
+    "gui_quit_title": "Nicht so schnell",
+    "gui_share_quit_warning": "Du versendest gerade Dateien. Bist du sicher, dass du OnionShare beenden willst?",
+    "gui_receive_quit_warning": "Du empfängst gerade Dateien. Bist du sicher, dass du OnionShare beenden willst?",
+    "error_rate_limit": "Jemand hat deine Adresse zu oft falsch eingegeben, das heißt, jemand könnte versuchen, sie zu erraten. Deswegen hat OnionShare den Server gestoppt. Starte den Server erneut und schicke dem Empfänger die neue Adresse, um die Dateien zu verschicken.",
+    "zip_progress_bar_format": "Packe: %p%",
+    "error_stealth_not_supported": "Um Klientauthorisierung zu nutzen, benötigst du mindestens Tor 0.2.9.1-alpha (or Tor Browser 6.5) und python3-stem 1.5.0.",
+    "error_ephemeral_not_supported": "OnionShare benötigt mindestens Tor 0.2.7.1 als auch python3-stem 1.4.0.",
+    "gui_settings_whats_this": "<a href='{0:s}'>Was ist das?</a>",
+    "gui_settings_stealth_option": "Nutze Klientauthorisierung (Alt)",
+    "gui_settings_autoupdate_label": "Suche nach einer neueren Version",
+    "gui_settings_autoupdate_option": "Benachrichtige mich, wenn eine neuere Version verfügbar ist",
+    "gui_settings_autoupdate_check_button": "Suche nach neuerer Version",
+    "gui_settings_general_label": "Allgemeine Einstellungen",
+    "gui_settings_sharing_label": "Servereinstellungen",
+    "gui_settings_connection_type_automatic_option": "Versuche mit dem Tor Browser automatisch zu konfigurieren",
+    "gui_settings_connection_type_test_button": "Teste Verbindung zum Tornetzwerk",
+    "gui_settings_authenticate_label": "Autentifizierungseinstellungen für Tor",
+    "gui_settings_tor_bridges": "Einstellungen für Tor bridges",
+    "gui_settings_meek_lite_expensive_warning": "Achtung: Die meek_lite bridges sind für das Tor Projekt sehr kostspielig.<br><br> Nutze sie nur, wenn du dich nicht direkt, per obfs4 Transport oder über andere, normale bridges zum Tornetzwerk verbinden kannst.",
+    "gui_settings_tor_bridges_invalid": "Keine der bridges, die du angegeben hast, funktionieren.\nÜberprüfe sie oder gebe Andere an.",
+    "settings_error_unknown": "Kann nicht zum Tor controller verbinden, weil deine Einstellungen keinen Sinn ergeben.",
+    "settings_error_automatic": "Kann nicht zum Tor controller verbinden. Läuft der Tor Browser (zum Download unter torproject.org) im Hintergrund?",
+    "settings_error_socket_port": "Kann unter {}:{} nicht zum Tor controller verbinden.",
+    "settings_error_unreadable_cookie_file": "Verbindung zum Tor controller hergestellt, aber dein Passwort ist falsch oder dein Nutzer hat keine Rechte, die Cookiedatei zu lesen.",
+    "settings_error_bundled_tor_not_supported": "Im Entwicklermodus auf Windows oder macOS kannst du die Torversion, die mit OnionShare gekoppelt ist nicht nutzen.",
+    "settings_error_bundled_tor_timeout": "Die Verbindung zum Tornetzwerk braucht zu lang. Bist du vielleicht nicht mit dem Internet verbunden oder geht die Uhr auf deinem System falsch?",
+    "settings_error_bundled_tor_broken": "OnionShare konnte nicht zu Tor im Hintergrund verbinden:\n{}",
+    "settings_test_success": "Verbunden mit dem Tor controller.\n\nTorversion: {}\nUnterstützt flüchtige onion services: {}.\nUnterstützt Klientauthorisierung: {}.\nUnterstützt .onion Adressen der nächsten Generation: {}.",
+    "error_tor_protocol_error": "Es gab eine Fehler mit Tor: {}",
+    "error_tor_protocol_error_unknown": "Es gab einen unbekannten Fehler mit Tor",
+    "error_invalid_private_key": "Diese Art von privatem Schlüssel wird nicht unterstützt",
+    "update_available": "Es gibt eine neue Version von OnionShare. <a href='{}'>Klicke hier</a> um sie herunterzuladen.<br><br>Du benutzt {} und die neueste Version ist {}.",
+    "update_error_check_error": "Konnte nicht nach neueren Versionen suchen: Die OnionShareSeite sagt, die letzte Version ist die unkenntliche '{}'…",
+    "update_error_invalid_latest_version": "Konnte nicht nach neueren Versionen suchen: Bist du vielleicht nicht mit dem Tornetzwerk verbunden oder ist die OnionShareSeite offline?",
+    "update_not_available": "Du benutzt bereits die neueste Version von OnionShare.",
+    "gui_tor_connection_ask": "Einstellungen öffnen, um die Verbindung zum Tornetzwerk zu ermöglichen?",
+    "gui_tor_connection_ask_open_settings": "Ja",
+    "gui_tor_connection_error_settings": "Versuche in den Einstellung zu ändern, wie sich OnionShare mit dem Tornetzwerk verbindet.",
+    "gui_tor_connection_canceled": "Konnte keine Verbindung zu Tor herstellen.\n\nStelle sicher, dass du mit dem Internet verbunden bist, öffne OnionShare erneut und richte die Verbindung zu Tor ein.",
+    "share_via_onionshare": "Teile es per OnionShare",
+    "gui_use_legacy_v2_onions_checkbox": "Nutze das alte Adressformat",
+    "gui_save_private_key_checkbox": "Nutze eine gleichbleibende Adresse (alt)",
+    "gui_share_url_description": "<b>Jeder</b> mit dieser OnionShareAdresse kann deine Dateien mit dem <b>Tor Browser</b> <b>herunterladen</b>: <img src='{}' />",
+    "gui_receive_url_description": "<b>Jeder</b> mit dieser OnionShareAdresse kann mit dem <b>Tor Browser</b> Dateien auf deinen Computer <b>hochladen</b>: <img src='{}' />",
+    "gui_url_label_persistent": "Dieser Server wird nicht automatisch stoppen.<br><br>Jeder folgende Server wird die Adresse erneut nutzen. (Um Adressen nur einmal zu nutzen, schalte \"Nutze beständige Adressen\" in den Einstellungen aus.)",
+    "gui_url_label_stay_open": "Dieser Server wird nicht automatisch stoppen.",
+    "gui_url_label_onetime": "Dieser Server wird nach dem ersten vollständigen Download stoppen.",
+    "gui_status_indicator_share_working": "Starte…",
+    "gui_status_indicator_share_started": "Läuft",
+    "gui_status_indicator_receive_stopped": "Bereit zum Empfangen",
+    "gui_status_indicator_receive_working": "Starte…",
+    "gui_status_indicator_receive_started": "Empfange",
+    "gui_file_info": "{} Dateien, {}",
+    "gui_file_info_single": "{} Datei, {}",
+    "history_completed_tooltip": "{} vollständige",
+    "info_in_progress_uploads_tooltip": "{} Upload(s) laufen",
+    "info_completed_uploads_tooltip": "{} Upload(s) vollständig",
+    "error_cannot_create_downloads_dir": "Konnte den Ordner für den Empfängermodus nicht erstellen: {}",
+    "receive_mode_downloads_dir": "Dateien, die dir geschickt werden, findest du in diesem Ordner: {}",
+    "receive_mode_warning": "Achtung: Im Empfängermodus können Leute Dateien auf deinen Computer laden. Einige Dateien können die Kontrolle über deinen Computer übernehmen, wenn du sie öffnest. Öffne nur Dateien von Personen, denen du vertraust oder wenn du genau weißt, was du tust.",
+    "gui_receive_mode_warning": "Im Empfängermodus können Leute Dateien auf deinen Computer laden.<br><br><b>Einige Dateien können die Kontrolle über deinen Computer übernehmen, wenn du sie öffnest. Öffne nur Dateien von Personen, denen du vertraust oder wenn du genau weißt, was du tust.</b>",
+    "receive_mode_received_file": "Empfangen: {}",
+    "gui_mode_share_button": "Versende Dateien",
+    "gui_mode_receive_button": "Empfange Dateien",
+    "gui_settings_receiving_label": "Empfangseinstellungen",
+    "gui_settings_downloads_label": "Speichere Dateien in",
+    "gui_settings_downloads_button": "Durchsuchen",
+    "gui_settings_receive_allow_receiver_shutdown_checkbox": "Der Empfängermodus kann vom Versender gestoppt werden",
+    "gui_settings_public_mode_checkbox": "Öffentlich",
+    "systray_close_server_title": "OnionShareServer gestoppt",
+    "systray_close_server_message": "Ein Nutzer hat den Server gestoppt",
+    "systray_download_page_loaded_message": "Ein Nutzer hat die Downloadseite geöffnet",
+    "systray_upload_page_loaded_message": "Ein Nutzer hat die Uploadseite geöffnet",
+    "gui_uploads": "Uploadhistorie",
+    "gui_no_uploads": "Bisher keine Uploads",
+    "gui_clear_history": "Alle löschen",
+    "gui_upload_in_progress": "Upload gestartet {}",
+    "gui_download_in_progress": "Download gestartet {}",
+    "gui_open_folder_error_nautilus": "Kann den Ordner nicht öffnen, weil Nautilus nicht verfügbar ist. Die Datei ist hier: {}",
+    "gui_settings_language_label": "Bevorzugte Sprache",
+    "gui_settings_language_changed_notice": "Starte OnionShare neu, damit die Sprache geändert wird.",
+    "help_config": "Ort deiner eigenen JSON Konfigurationsdatei (optional)"
 }
