--- a/share/locale/fr.json
+++ b/share/locale/fr.json
@@ -1,34 +1,158 @@
 {
-    "preparing_files": "Préparation des fichiers à partager.",
-    "give_this_url": "Donnez cette URL à la personne qui doit recevoir le fichier :",
-    "ctrlc_to_stop":  "Ctrl-C arrête le serveur",
-    "not_a_file": "{0:s} n'est pas un fichier.",
-    "other_page_loaded": "URL chargée",
-    "closing_automatically": "Fermeture automatique car le téléchargement est fini",
+    "preparing_files": "Compression des fichiers.",
+    "give_this_url": "Donnez cette adresse au destinataire :",
+    "ctrlc_to_stop": "Appuyez sur Ctrl+c pour arrêter le serveur",
+    "not_a_file": "{0:s} n'est pas un fichier valide.",
+    "other_page_loaded": "Adresse chargée",
+    "closing_automatically": "Arrêt automatique car le téléchargement est fini",
     "systray_menu_exit": "Quitter",
-    "systray_download_started_title": "Téléchargement OnionShare Démarré",
+    "systray_download_started_title": "Téléchargement OnionShare démarré",
     "systray_download_started_message": "Un utilisateur télécharge vos fichiers",
-    "systray_download_completed_title": "Téléchargement OnionShare Complete",
-    "systray_download_canceled_title": "Téléchargement OnionShare Annulé",
+    "systray_download_completed_title": "Téléchargement OnionShare terminé",
+    "systray_download_canceled_title": "Téléchargement OnionShare annulé",
     "systray_download_canceled_message": "L'utilisateur a annulé le téléchargement",
-    "help_local_only": "Ne tentez pas d'utiliser Tor, uniquement pour développement",
-    "help_stay_open": "Laisser tourner le onion service après que le téléchargment soit fini",
-    "help_debug": "Enregistrer les erreurs sur le disque",
+    "help_local_only": "Ne pas utiliser Tor (uniquement pour le développement)",
+    "help_stay_open": "Continuer le partage après le premier téléchargement",
+    "help_debug": "Enregistrer les erreurs OnionShare sur la sortie standard, et les erreurs web sur le disque",
     "help_filename": "Liste des fichiers ou dossiers à partager",
     "gui_drag_and_drop": "Glissez déposez\nles fichiers ici",
     "gui_add": "Ajouter",
     "gui_delete": "Supprimer",
     "gui_choose_items": "Sélectionnez",
-    "gui_share_start_server": "Démarrer le serveur",
-    "gui_share_stop_server": "Arrêter le serveur",
-    "gui_copy_url": "Copier URL",
+    "gui_share_start_server": "Commencer à partager",
+    "gui_share_stop_server": "Arrêter le partage",
+    "gui_copy_url": "Copier l'adresse",
     "gui_copy_hidservauth": "Copier HidServAuth",
-    "gui_downloads": "Téléchargements :",
+    "gui_downloads": "Historique de téléchargement",
     "gui_canceled": "Annulé",
-    "gui_copied_url": "URL copié dans le presse-papier",
-    "gui_please_wait": "Attendez-vous...",
+    "gui_copied_url": "Adresse OnionShare copiée dans le presse-papiers",
+    "gui_please_wait": "Démarrage… Cliquez pour annuler.",
     "gui_quit_warning_quit": "Quitter",
-    "gui_quit_warning_dont_quit": "Ne quitter pas",
+    "gui_quit_warning_dont_quit": "Annuler",
     "gui_settings_autoupdate_timestamp_never": "Jamais",
-    "gui_settings_language_changed_notice": "Redémarrez OnionShare pour que votre changement de langue prenne effet"
+    "gui_settings_language_changed_notice": "Redémarrez OnionShare pour que votre changement de langue prenne effet.",
+    "config_onion_service": "Mise en place du service oignon sur le port {0:d}.",
+    "give_this_url_stealth": "Donnez cette adresse et cette ligne HidServAuth au destinataire :",
+    "give_this_url_receive": "Donnez cette adresse à l'expéditeur :",
+    "give_this_url_receive_stealth": "Donnez cette adresse et HidServAuth à l'expéditeur :",
+    "not_a_readable_file": "{0:s} n'est pas un fichier lisible.",
+    "timeout_download_still_running": "En attente de la fin du téléchargement",
+    "systray_download_completed_message": "L'utilisateur a terminé de télécharger vos fichiers",
+    "gui_copied_hidservauth_title": "HidServAuth copié",
+    "gui_settings_window_title": "Paramètres",
+    "gui_settings_autoupdate_timestamp": "Dernière vérification : {}",
+    "gui_settings_close_after_first_download_option": "Arrêt du partage après le premier téléchargement",
+    "gui_settings_connection_type_label": "Comment OnionShare doit se connecter à Tor ?",
+    "gui_settings_connection_type_control_port_option": "Se connecter avec le port de contrôle",
+    "gui_settings_connection_type_socket_file_option": "Se connecter à l'aide d'un fichier socket",
+    "gui_settings_socket_file_label": "Fichier socket",
+    "gui_settings_socks_label": "Port SOCKS",
+    "gui_settings_authenticate_no_auth_option": "Pas d'authentification ou authentification par cookie",
+    "gui_settings_authenticate_password_option": "Mot de passe",
+    "gui_settings_password_label": "Mot de passe",
+    "gui_settings_tor_bridges_no_bridges_radio_option": "Ne pas utiliser de bridge",
+    "gui_settings_button_save": "Sauvegarder",
+    "gui_settings_button_cancel": "Annuler",
+    "gui_settings_button_help": "Aide",
+    "gui_settings_shutdown_timeout": "Arrêter le partage à :",
+    "connecting_to_tor": "Connexion au réseau Tor",
+    "help_config": "Emplacement du fichier de configuration JSON personnalisé (optionnel)",
+    "large_filesize": "Avertissement : envoyer un gros fichier peut prendre plusieurs heures",
+    "gui_copied_hidservauth": "Ligne HidServAuth copiée dans le presse-papiers",
+    "version_string": "OnionShare {0:s} | https://onionshare.org/",
+    "zip_progress_bar_format": "Compression : %p%",
+    "error_ephemeral_not_supported": "OnionShare nécessite au moins Tor 0.2.7.1 et python3-stem 1.4.0.",
+    "help_shutdown_timeout": "Arrêter le partage après un certain nombre de secondes",
+    "gui_tor_connection_error_settings": "Essayez de modifier dans les paramètres la façon dont OnionShare se connecte au réseau Tor.",
+    "no_available_port": "Impossible de trouver un port disponible pour démarrer le service oignon",
+    "gui_share_stop_server_shutdown_timeout": "Arrêter le partage ({}s restantes)",
+    "systray_upload_started_title": "Envoi OnionShare démarré",
+    "systray_upload_started_message": "Une personne a commencé à envoyer des fichiers vers votre ordinateur",
+    "gui_no_downloads": "Pas encore de téléchargements",
+    "gui_copied_url_title": "Adresse OnionShare copiée",
+    "gui_quit_title": "Pas si vite",
+    "gui_share_quit_warning": "Vous êtes en train d'envoyer des fichiers. Voulez-vous vraiment quitter OnionShare ?",
+    "gui_receive_quit_warning": "Vous êtes en train de recevoir des fichiers. Voulez-vous vraiment quitter OnionShare ?",
+    "gui_settings_whats_this": "<a href='{0:s}'>Qu'est-ce que c'est ?</a>",
+    "gui_settings_autoupdate_label": "Rechercher des mises à jour",
+    "gui_settings_autoupdate_option": "Me notifier lorsque des mises à jour sont disponibles",
+    "gui_settings_general_label": "Paramètres généraux",
+    "gui_settings_sharing_label": "Paramètres de partage",
+    "gui_settings_connection_type_bundled_option": "Utiliser la version de Tor inclue dans OnionShare",
+    "gui_settings_connection_type_automatic_option": "Essayer la configuration automatique avec le navigateur Tor",
+    "gui_settings_connection_type_test_button": "Tester la connexion à Tor",
+    "gui_settings_control_port_label": "Port de contrôle",
+    "gui_settings_authenticate_label": "Paramètres d'authentification de Tor",
+    "gui_settings_tor_bridges": "Support des bridges Tor",
+    "gui_settings_tor_bridges_custom_radio_option": "Utiliser des bridges personnalisés",
+    "gui_settings_tor_bridges_custom_label": "Vous pouvez obtenir des bridges à l'adresse <a href=\"https://bridges.torproject.org/options\">https://bridges.torproject.org</a>",
+    "gui_settings_tor_bridges_invalid": "Aucun des bridges que vous avez ajouté ne fonctionne.\nVérifiez les à nouveau ou ajoutez-en d'autres.",
+    "settings_error_unknown": "Impossible de se connecter au contrôleur Tor car les paramètres n'ont pas de sens.",
+    "settings_error_automatic": "Impossible de se connecter au contrôleur Tor. Est-ce que le navigateur Tor (disponible sur torproject.org) fonctionne en arrière-plan ?",
+    "settings_error_socket_port": "Impossible de se connecter au contrôleur Tor à {}:{}.",
+    "settings_error_socket_file": "Impossible de se connecter au contrôleur Tor en utilisant le fichier socket {}.",
+    "settings_error_auth": "Connecté à {}:{} mais impossible de s'authentifier. Peut-être que ce n'est pas un contrôleur Tor ?",
+    "settings_error_missing_password": "Connecté au contrôleur Tor mais il demande un mot de passe pour s'authentifier.",
+    "settings_error_unreadable_cookie_file": "Connecté au contrôleur Tor, mais le mot de passe est peut-être faux ou l'utilisateur n'a pas la permission de lire le fichier cookie.",
+    "settings_error_bundled_tor_not_supported": "L'utilisation de la version de Tor inclue avec OnionShare ne marche pas dans le mode développement sous Windows ou macOS.",
+    "settings_error_bundled_tor_timeout": "La connexion à Tor prend trop de temps. Peut-être qu'il n'y a pas de connexion à Internet ou que l'horloge système est inexacte ?",
+    "settings_error_bundled_tor_broken": "OnionShare n'a pas pu se connecter à Tor en arrière-plan :\n{}",
+    "error_tor_protocol_error": "Il y a eu une erreur avec Tor : {}",
+    "error_tor_protocol_error_unknown": "Il y a eu une erreur inconnue avec Tor",
+    "error_invalid_private_key": "Ce type de clé privée n'est pas supporté",
+    "update_available": "Une nouvelle version de OnionShare est disponible. <a href='{}'>Cliquez ici</a> pour l'obtenir.<br><br>Vous utilisez actuellement la version {} et la dernière version est la {}.",
+    "update_not_available": "Vous utilisez la dernière version d'OnionShare.",
+    "gui_tor_connection_ask_open_settings": "Oui",
+    "gui_tor_connection_ask_quit": "Quitter",
+    "gui_tor_connection_lost": "Déconnecté de Tor.",
+    "share_via_onionshare": "Partager via OnionShare",
+    "gui_save_private_key_checkbox": "Utiliser une adresse persistante (legacy)",
+    "gui_share_url_description": "Avec cette adresse OnionShare <b>n'importe qui</b> peut <b>télécharger</b> vos fichiers en utilisant le <b>navigateur Tor</b> : <img src='{}' />",
+    "gui_receive_url_description": "Avec cette adresse OnionShare <b>n'importe qui</b> peut <b>envoyer</b> des fichiers vers votre ordinateur en utilisant le <b>navigateur Tor</b> : <img src='{}' />",
+    "gui_url_label_persistent": "Ce partage ne s'arrêtera pas automatiquement.<br><br>Tous les partages suivants réutiliseront l'adresse. (Pour utiliser des adresses uniques, désactivez \"Utiliser une adresse persistante\" dans les paramètres.)",
+    "gui_url_label_stay_open": "Ce partage ne s'arrêtera pas automatiquement.",
+    "gui_url_label_onetime": "Ce partage s'arrêtera après le premier téléchargement complété.",
+    "gui_url_label_onetime_and_persistent": "Ce partage ne s'arrêtera pas automatiquement.<br><br>Tous les partages suivants devraient réutiliser l'adresse. (Pour utiliser des adresses uniques, désactivez \"Utiliser une adresse persistante\" dans les paramètres.)",
+    "gui_status_indicator_share_stopped": "Prêt à partager",
+    "gui_status_indicator_share_working": "Démarrage…",
+    "gui_status_indicator_share_started": "Partage",
+    "gui_status_indicator_receive_stopped": "Prêt à recevoir",
+    "gui_status_indicator_receive_working": "Démarrage…",
+    "gui_status_indicator_receive_started": "Réception",
+    "gui_file_info": "{} fichiers, {}",
+    "gui_file_info_single": "{} fichier, {}",
+    "history_in_progress_tooltip": "{} en cours",
+    "history_completed_tooltip": "{} terminé",
+    "receive_mode_downloads_dir": "Les fichiers qui vous sont envoyés apparaissent dans ce dossier : {}",
+    "receive_mode_warning": "Avertissement : le mode réception permet à des personnes d'envoyer des fichiers vers votre ordinateur. Certains fichiers peuvent potentiellement prendre le contrôle de votre ordinateur si vous les ouvrez. Ouvrez uniquement des choses provenant de personnes de confiance ou si vous savez ce que vous faites.",
+    "gui_receive_mode_warning": "Le mode réception permet à des personnes d'envoyer des fichiers vers votre ordinateur.<br><br><b>Certains fichiers peuvent potentiellement prendre le contrôle de votre ordinateur si vous les ouvrez. Ouvrez uniquement des choses provenant de personnes de confiance ou si vous savez ce que vous faites.<b>",
+    "receive_mode_received_file": "Reçu : {}",
+    "gui_mode_share_button": "Fichiers partagés",
+    "gui_mode_receive_button": "Fichiers reçus",
+    "gui_settings_receiving_label": "Paramètres de réception",
+    "gui_settings_downloads_label": "Enregistrer les fichiers sous",
+    "gui_settings_downloads_button": "Parcourir",
+    "gui_settings_receive_allow_receiver_shutdown_checkbox": "Le mode réception peut-être arrêté par l'expéditeur",
+    "gui_settings_public_mode_checkbox": "Mode public",
+    "systray_close_server_title": "Serveur OnionShare arrêté",
+    "gui_uploads": "Historique d'envoi",
+    "gui_no_uploads": "Pas encore d'envoi",
+    "gui_clear_history": "Tout effacer",
+    "gui_upload_in_progress": "Envoi démarré {}",
+    "gui_upload_finished_range": "Envoyé {} de {}",
+    "gui_upload_finished": "{} envoyé",
+    "gui_download_in_progress": "Téléchargement démarré {}",
+    "gui_open_folder_error_nautilus": "Impossible d'ouvrir le dossier car nautilus n'est pas disponible. Le fichier est ici : {}",
+    "gui_settings_language_label": "Langue préférée",
+    "help_stealth": "Utilisation de l'autorisation client (avancé)",
+    "help_receive": "Recevoir des partages au lieu de les envoyer",
+    "gui_receive_start_server": "Démarrer le mode réception",
+    "gui_receive_stop_server": "Arrêter le mode réception",
+    "gui_receive_stop_server_shutdown_timeout": "Arrêter le mode réception ({}s restantes)",
+    "gui_download_upload_progress_complete": "%p%, {0:s} écoulées.",
+    "gui_download_upload_progress_starting": "{0:s}, %p% (estimation)",
+    "gui_download_upload_progress_eta": "{0:s}, Fin : {1:s}, %p%",
+    "error_rate_limit": "Une personne a effectué sur votre adresse beaucoup de tentatives qui ont échouées, ce qui veut dire qu'elle essayait de la deviner, ainsi OnionShare a arrêté le serveur. Démarrez le partage à nouveau et envoyez une nouvelle adresse au destinataire pour pouvoir partager.",
+    "error_stealth_not_supported": "Pour utiliser l’autorisation client, vous avez besoin d'au moins Tor 0.2.9.1-alpha (ou le navigateur Tor 6.5) et python3-stem 1.5.0.",
+    "gui_settings_stealth_option": "Utiliser l'autorisation client (legacy)"
 }
