Remove "(legacy) from v2-only settings dialog options"

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -69,7 +69,7 @@
     "error_ephemeral_not_supported": "OnionShare requires at least both Tor 0.2.7.1 and python3-stem 1.4.0.",
     "gui_settings_window_title": "Settings",
     "gui_settings_whats_this": "<a href='{0:s}'>What's this?</a>",
-    "gui_settings_stealth_option": "Use client authorization (legacy)",
+    "gui_settings_stealth_option": "Use client authorization",
     "gui_settings_stealth_hidservauth_string": "Having saved your private key for reuse, means you can now\nclick to copy your HidServAuth.",
     "gui_settings_autoupdate_label": "Check for new version",
     "gui_settings_autoupdate_option": "Notify me when a new version is available",
@@ -137,7 +137,7 @@
     "share_via_onionshare": "OnionShare it",
     "gui_connect_to_tor_for_onion_settings": "Connect to Tor to see onion service settings",
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
-    "gui_save_private_key_checkbox": "Use a persistent address (legacy)",
+    "gui_save_private_key_checkbox": "Use a persistent address",
     "gui_share_url_description": "<b>Anyone</b> with this OnionShare address can <b>download</b> your files using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_receive_url_description": "<b>Anyone</b> with this OnionShare address can <b>upload</b> files to your computer using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_url_label_persistent": "This share will not auto-stop.<br><br>Every subsequent share reuses the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
