updates to es, fr, pt_BR translations that create conflict in weblate

--- a/share/locale/fr.json
+++ b/share/locale/fr.json
@@ -7,15 +7,15 @@
     "closing_automatically": "Arrêt automatique car le téléchargement est fini",
     "systray_menu_exit": "Quitter",
     "systray_download_started_title": "Téléchargement OnionShare démarré",
-    "systray_download_started_message": "Un utilisateur télécharge vos fichiers",
+    "systray_download_started_message": "Une personne télécharge vos fichiers",
     "systray_download_completed_title": "Téléchargement OnionShare terminé",
     "systray_download_canceled_title": "Téléchargement OnionShare annulé",
-    "systray_download_canceled_message": "L'utilisateur a annulé le téléchargement",
+    "systray_download_canceled_message": "La personne a annulé le téléchargement",
     "help_local_only": "Ne pas utiliser Tor (uniquement pour le développement)",
     "help_stay_open": "Continuer le partage après le premier téléchargement",
     "help_debug": "Enregistrer les erreurs OnionShare sur la sortie standard, et les erreurs web sur le disque",
     "help_filename": "Liste des fichiers ou dossiers à partager",
-    "gui_drag_and_drop": "Glissez déposez\nles fichiers ici",
+    "gui_drag_and_drop": "Glissez-déposez les fichiers et dossiers\npour commencer à partager",
     "gui_add": "Ajouter",
     "gui_delete": "Supprimer",
     "gui_choose_items": "Sélectionnez",
@@ -37,12 +37,12 @@
     "give_this_url_receive_stealth": "Donnez cette adresse et HidServAuth à l'expéditeur :",
     "not_a_readable_file": "{0:s} n'est pas un fichier lisible.",
     "timeout_download_still_running": "En attente de la fin du téléchargement",
-    "systray_download_completed_message": "L'utilisateur a terminé de télécharger vos fichiers",
+    "systray_download_completed_message": "La personne a terminé de télécharger vos fichiers",
     "gui_copied_hidservauth_title": "HidServAuth copié",
     "gui_settings_window_title": "Paramètres",
     "gui_settings_autoupdate_timestamp": "Dernière vérification : {}",
     "gui_settings_close_after_first_download_option": "Arrêt du partage après le premier téléchargement",
-    "gui_settings_connection_type_label": "Comment OnionShare doit se connecter à Tor ?",
+    "gui_settings_connection_type_label": "Comment OnionShare doit-il se connecter à Tor ?",
     "gui_settings_connection_type_control_port_option": "Se connecter avec le port de contrôle",
     "gui_settings_connection_type_socket_file_option": "Se connecter à l'aide d'un fichier socket",
     "gui_settings_socket_file_label": "Fichier socket",
@@ -68,7 +68,7 @@
     "gui_share_stop_server_shutdown_timeout": "Arrêter le partage ({}s restantes)",
     "systray_upload_started_title": "Envoi OnionShare démarré",
     "systray_upload_started_message": "Une personne a commencé à envoyer des fichiers vers votre ordinateur",
-    "gui_no_downloads": "Pas encore de téléchargements",
+    "gui_no_downloads": "Pas encore de téléchargement",
     "gui_copied_url_title": "Adresse OnionShare copiée",
     "gui_quit_title": "Pas si vite",
     "gui_share_quit_warning": "Vous êtes en train d'envoyer des fichiers. Voulez-vous vraiment quitter OnionShare ?",
@@ -154,5 +154,33 @@
     "gui_download_upload_progress_eta": "{0:s}, Fin : {1:s}, %p%",
     "error_rate_limit": "Une personne a effectué sur votre adresse beaucoup de tentatives qui ont échouées, ce qui veut dire qu'elle essayait de la deviner, ainsi OnionShare a arrêté le serveur. Démarrez le partage à nouveau et envoyez une nouvelle adresse au destinataire pour pouvoir partager.",
     "error_stealth_not_supported": "Pour utiliser l’autorisation client, vous avez besoin d'au moins Tor 0.2.9.1-alpha (ou le navigateur Tor 6.5) et python3-stem 1.5.0.",
-    "gui_settings_stealth_option": "Utiliser l'autorisation client (legacy)"
+    "gui_settings_stealth_option": "Utiliser l'autorisation client (legacy)",
+    "timeout_upload_still_running": "En attente de la fin de l'envoi",
+    "gui_settings_stealth_hidservauth_string": "Vous avez enregistré votre clé privée, vous pouvez maintenant\ncliquer pour copier votre HidServAuth.",
+    "gui_settings_autoupdate_check_button": "Vérifier les mises à jour",
+    "settings_test_success": "Connecté au contrôleur Tor.\n\nVersion de Tor : {}\nSupport des services oignon éphémères : {}.\nSupport de l'authentification client : {}.\nSupport de la nouvelle génération d'adresses .onion : {}.",
+    "update_error_check_error": "Impossible de vérifier les mises à jour : le site web d'OnionShare dit que la dernière version est la méconnaissable '{}'…",
+    "update_error_invalid_latest_version": "Impossible de vérifier les mises à jour : peut-être qu'il n'y a pas de connexion à Tor ou que le site web d'OnionShare est hors service ?",
+    "gui_tor_connection_ask": "Ouvrir les paramètres pour configurer la connexion à Tor ?",
+    "gui_tor_connection_canceled": "Impossible de se connecter à Tor.\n\nVérifiez votre connexion à Internet, puis réouvrez OnionShare et configurez sa connexion à Tor.",
+    "gui_use_legacy_v2_onions_checkbox": "Utiliser les adresses legacy",
+    "info_in_progress_uploads_tooltip": "{} envoi(s) en cours",
+    "info_completed_uploads_tooltip": "{} envoi(s) terminé(s)",
+    "error_cannot_create_downloads_dir": "Impossible de créer le dossier du mode réception : {}",
+    "receive_mode_upload_starting": "Un envoi d'une taille totale de {} a commencé",
+    "systray_close_server_message": "Une personne a arrêté le serveur",
+    "systray_page_loaded_title": "Page OnionShare chargée",
+    "systray_download_page_loaded_message": "Une personne a chargé la page de téléchargement",
+    "systray_upload_page_loaded_message": "Une personne a chargé la page d'envoi",
+    "gui_share_stop_server_shutdown_timeout_tooltip": "La minuterie d'arrêt automatique se termine après {}",
+    "gui_receive_stop_server_shutdown_timeout_tooltip": "La minuterie d'arrêt automatique se termine après {}",
+    "gui_settings_tor_bridges_obfs4_radio_option": "Utiliser les transports enfichables obfs4 intégrés",
+    "gui_settings_tor_bridges_obfs4_radio_option_no_obfs4proxy": "Utiliser les transports enfichables obfs4 intégrés (nécessitent obfs4proxy)",
+    "gui_settings_tor_bridges_meek_lite_azure_radio_option": "Utiliser les transports enfichables meek_lite (Azure) intégrés",
+    "gui_settings_tor_bridges_meek_lite_azure_radio_option_no_obfs4proxy": "Utiliser les transports enfichables meek_lite (Azure) intégrés (nécessitent obfs4proxy)",
+    "gui_settings_meek_lite_expensive_warning": "Avertissement : les bridges meek_lite sont très coûteux à faire fonctionner pour le Tor Project.<br><br>Utilisez les seulement si vous ne pouvez pas vous connecter à Tor directement, via les transports obfs4 ou avec d'autres bridges normaux.",
+    "gui_settings_shutdown_timeout_checkbox": "Utiliser la minuterie d'arrêt automatique",
+    "gui_server_started_after_timeout": "La minuterie d'arrêt automatique a expiré avant le démarrage du serveur.\nVeuillez faire un nouveau partage.",
+    "gui_server_timeout_expired": "La minuterie d'arrêt automatique a déjà expiré.\nVeuillez la mettre à jour pour démarrer le partage.",
+    "close_on_timeout": "Arrêté parce que la minuterie d'arrêt automatique a expiré"
 }
