--- a/share/locale/es.json
+++ b/share/locale/es.json
@@ -98,8 +98,8 @@
     "gui_server_started_after_timeout": "El temporizador de parada automática se agotó antes de que se iniciara el servidor.\nPor favor, haz una nueva porción.",
     "gui_server_timeout_expired": "El temporizador de parada automática ya se ha agotado.\nPor favor, actualízalo para comenzar a compartir.",
     "share_via_onionshare": "Compártelo con OnionShare",
-    "gui_use_legacy_v2_onions_checkbox": "Usar direcciones de legado",
-    "gui_save_private_key_checkbox": "Usar una dirección persistente (legado)",
+    "gui_use_legacy_v2_onions_checkbox": "Usar direcciones antiguas",
+    "gui_save_private_key_checkbox": "Usar una dirección persistente (modo antiguo)",
     "gui_share_url_description": "<b>Cualquier persona </b> con esta dirección de OnionShare puede <b>descargar</b> tus archivos usando el <b>Tor Browser</b>: <img src='{}' />",
     "gui_receive_url_description": "Con esta dirección de OnionShare, <b>cualquier persona</b> puede <b>subir</b> archivos a tu ordenador usando el <b>Tor Browser</b>: <img src='{}' />",
     "gui_url_label_persistent": "Este recurso compartido no se detendrá automáticamente.<br><br>Cada recurso compartido subsiguiente reutilizará la dirección. (Para usar direcciones una sola vez, desactiva la opción \"Usar dirección persistente\" en los ajustes.)",
@@ -185,5 +185,6 @@
     "gui_open_folder_error_nautilus": "No se puede abrir la carpeta porque nautilus no está disponible. El archivo está aquí: {}",
     "gui_settings_language_label": "Idioma preferido",
     "gui_settings_language_changed_notice": "Reinicia OnionShare para que el cambio de idioma surta efecto.",
-    "gui_upload_finished_range": "Cargado {} a {}"
+    "gui_upload_finished_range": "Cargado {} a {}",
+    "timeout_upload_still_running": "Esperando a que se complete la subida"
 }
